--- a/text.css
+++ b/text.css
@@ -1,11 +1,13 @@
 h1{
     text-align: center;
+    background-color: aqua;
     border-style: dotted;
     padding: 10px;
     margin: 20px;
     border-radius: 20px;
     border-width: 5px;
     display: inline-block;
+    box-sizing: border-box;
     position: absolute;
     top: 10px;
     left: 50%;
