--- a/formSturcture.css
+++ b/formSturcture.css
@@ -2,5 +2,10 @@ h1{
     color: red;
     text-align: center;
     background-color: rgba(33, 129, 9, 0.432);
-    
+    border-style: double;
+    border-width: 10px;
+    border-radius: 10px;
+    box-shadow: gray 5px 5px 5px;
+    background-clip: content-box;
+    margin: 10px;
 }
