Items added in the form

--- a/formSturcture.css
+++ b/formSturcture.css
@@ -1,5 +1,6 @@
 h1{
     color: red;
+    font-size: xx-large;
     text-align: center;
     background-color: rgba(33, 129, 9, 0.432);
     border-style: double;
@@ -17,4 +18,12 @@ label{
     display: block;
     margin: 10px;
     font-size: large;
+}
+fieldset{
+    margin: 15px;
+    box-shadow: gray 5px 5px 5px;
+    border-radius: 10px;
+}
+legend{
+    font-weight: 30%;
 }
